--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       <div style="font-size:14px;color:rgba(255,255,255,0.7)">Type the special name I gave you 💖</div>
       <input id="secretInput" class="code-input" type="password" placeholder="Secret code" autocomplete="off" />
       <button id="enterBtn" class="btn btn-enter">Enter</button>
-      <div class="hint">Hint: it's the name I love — Damilola</div>
+      <div class="hint">Hint: Your name</div>
       <div id="err" style="color:#ff4d6d;margin-top:8px;display:none"></div>
     </div>
   </div>
