--- a/index.html
+++ b/index.html
@@ -223,10 +223,18 @@
     const letterContent=document.getElementById('letterContent');
     const loveMessage=`
       <h2 style="color:var(--purple);margin-bottom:8px">To Adewole Damilola Success</h2>
-      <p>Happy Birthday, my beautiful Damilola! 🎉🎂</p>
-      <p>It's me, your forever joker and biggest fan. On this special day I pray that God blesses you with laughter, success, endless joy, and the happiest moments you can imagine.</p>
+      <p>Happy Birthday, my beautiful Success! 🎉🎂</p>
+      <p>It's me, your forever joker and biggest fan. On this special day, I pray that God blesses you with laughter, success, endless joy, and the happiest moments you can imagine.</p>
+
+      <p>But I have to admit... I'm still angry that you're older than me! 😜 Imagine, you clocking 18 before me! How rude! 😂 But honestly, I can’t even stay mad because you’re just too incredible. You always go the extra mile to make sure I’m okay, and trust me, I’ll do the same for you, always. 💖</p>
+
       <p>Also... I have to confess (playfully 😜): I love you more than I love my phone on 1% battery. You're my favourite notification, and I'm low-key planning to make you my future wife (only half joking 😏💍).</p>
+
       <p>Enjoy your day, today is all about you, queen. I love you to the moon and back. 🌙❤️</p>
+      
+      <p>You suppose they drag post with Beauty, what am I even saying, u are more beautiful, your beuty broke my scale. Most times i wonder when u will go back home (heaven). Cuz angel aint supposed to be here.</p>
+
+      <p>Cheers to more success, more laughter, and more memories with you. May your future be as bright as your name! 🌟</p>
       <p style="font-weight:700;margin-top:8px">— Your Future Huband. Emmy Wrld</p>`;
     letterTab.addEventListener('click',()=>{letterContent.innerHTML=loveMessage;});
 
